# bareos

./: .gitignore  Hilfe.txt  Noch Offen.txt
Meine Infos/: Bauen.txt  Noch Offen.txt  Testen.txt  console-config.txt  dir-config.txt  fd-config.txt  sd-config.txt  test.py
ZFS Tests/list/: CMakeLists.txt  code.cpp
cmake/: BareosSetVariableDefaults.cmake
core/: CMakeLists.txt
core/cmake/: BareosFindAllLibraries.cmake
core/src/include/: config.h.in
core/src/plugins/filed/: CMakeLists.txt
core/src/plugins/filed/zfs/: CMakeLists.txt  zfs-fd-config.cpp  zfs-fd-config.h  zfs-fd.cc  zfs-fd.h
core/src/stored/backends/: gfapi_device.h
docs/manuals/source/Appendix/: Howtos.rst
docs/manuals/source/Appendix/Howtos/: BackupOfZFS.rst.inc
systemtests/: CMakeLists.txt  environment.in
systemtests/tests/webui-selenium/: global.php.in
webui/tests/selenium/: webui-selenium-test.py
